---------------------------------------------------------------------------------------------------
Version: 0.5.7
Date: ???
  Bugfixes:
    - Fixed startup error with Mad Clown's mods enabled
---------------------------------------------------------------------------------------------------
Version: 0.5.6
Date: 14.08.2021
  Changes:
    - Re-enable early glass recipe as Arboretum now require glass
---------------------------------------------------------------------------------------------------
Version: 0.5.5
Date: 14.08.2021
  Changes:
    - Reverted default settings override of Bob's Adjustable Inserters mod
    - Made Long Inserters ignore tech cost modifier
    - Streamlined hand crafting of wood pellets and boards
    - Standardized terrain vehicle speed
    - Refund all landfill when painting over sand islands
    - Added missing tech prerequisites
    - Reduced cost of Water Treatment tech
    - Hid recipe Wood Pellets > Carbon Dioxide
    - Hid redundant ore sorting recipes
    - Re-enabled Coal silo (Angel's Addons - Storage Options)
    - Reverted ore crystallization recipe icons
    - Made Logistic System take pink science rather than yellow science (when possible)
    - Added support for Angel's Industries mod
    - Rebalanced salt to saline water recipe
    - Reverted Polishing wheel to require Wood rather than Wood pellets
    - Reverted Protective scaffolding to require Wood rather than Wood bricks
    - Removed override of Bob's furnaces as this has been implemented in Angel's
    - Disable and hide deep oil settings of cargo ships mod
    - Added platinum to high level modules and circuits
    - Unhide rocket part to make it easier to view in FNEI
    - Disabled Zinc, Nickel, and Cobalt plates
    - Move Nitinol smelting up a tier
    - Hide extra power entities
    - Added Ore sorting facility 5
    - Buffed recipes for Silicon carbide, Silicon nitride, Tungsten carbide plate, Copper-tungsten plate