@@ -105,10 +105,6 @@ if mods['bobpower'] then
   bobmods.lib.tech.replace_prerequisite('electric-pole-2', 'zinc-processing', 'angels-brass-smelting-1')
   bobmods.lib.tech.replace_prerequisite('electric-substation-2', 'zinc-processing', 'angels-brass-smelting-1')
 end
-if mods['bobwarfare'] then
-  bobmods.lib.tech.replace_prerequisite('bob-bullets', 'zinc-processing', 'angels-gunmetal-smelting-1')
-  bobmods.lib.tech.replace_prerequisite('bob-shotgun-shells', 'zinc-processing', 'angels-gunmetal-smelting-1')
-end
 
 -- Add fluid handling as a prerequisite for Oil and gas extraction
 -- Else Electric engine doesn't depend on Engine
