@@ -3,6 +3,7 @@ Version: 0.5.7
 Date: ???
   Bugfixes:
     - Fixed startup error with Mad Clown's mods enabled
+    - Hid gunmetal item, recipes, and tech
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.6
 Date: 14.08.2021
